--- a/search-image.html
+++ b/search-image.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <link rel="stylesheet" href="search.css">
+        <link rel="stylesheet" href="css/search.css">
     </head>
     <body>
-    	<a href="index.html">Google Search</a>
+    	<a href="search.html">Google Search</a>
         <form action="http://images.google.com/images" name="f">
             <input type="text" name="q" id="textbox">
             <div>
